<resources>
    <string name="app_name">Quiz</string>
    <string name="true_text">TRUE</string>
    <string name="false_text">FALSE</string>
    <string name="proxima_questao">PRÓXIMA QUESTÃO</string>
    <string name="resposta_errada">Você errou :(</string>
    <string name="resposta_certa">Você acertou (:</string>
    <string name="questao_anterior">questao_anterior</string>
    <string name="counter_question">0 a 100</string>
    <string name="title">Trivia</string>
    <string name="reiniciar_partida">REINICIAR PARTIDA</string>
    <string name="amior_pontuacao">Maior Pontuação: 0</string>
    <string name="score">Score: 0</string>
    <string name="ultima_pontuacao">ÚLTIMA PONTUAÇÃO</string>
    <string name="ultima_pontuacao_1">SCORE</string>
    <string name="yes">OK</string>
    <string name="ult_pontuacao_dialogo">Última Pontuação</string>
    <string name="pontos">pontos</string>
    <string name="drop_table">DROP TABLE IF EXISTS</string>

</resources>
