<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/roxo_vivo"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_above="@+id/ask_my_test"
        android:layout_marginBottom="70dp"
        android:text="@string/title"
        android:textColor="@color/amarelo_claro"
        android:textSize="60sp"
        android:textStyle="bold"
        app:fontFamily="@font/annie_use_your_telescope" />

    <TextView
        android:id="@+id/textView_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/ask_my_test"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-35dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="21dp"
        android:text="@string/counter_question"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="@font/annie_use_your_telescope" />

    <androidx.cardview.widget.CardView
        android:id="@+id/ask_my_test"
        android:layout_width="wrap_content"
        android:layout_height="146dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="6dp"
        android:background="@color/white"
        android:elevation="5dp"
        android:gravity="center"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cardCornerRadius="5dp"
        app:cardElevation="7dp">

        <TextView
            android:id="@+id/textView_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/black" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ask_my_test"
        android:layout_centerVertical="true"
        android:layout_marginTop="7dp"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@color/amarelo_claro"
            android:contentDescription="@string/questao_anterior"
            android:src="@drawable/ic_previous" />

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/linear"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="40dp"
            android:background="@color/amarelo_claro"
            android:text="@string/true_text"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="40dp"
            android:background="@color/amarelo_claro"
            android:text="@string/false_text"
            android:textColor="@color/black" />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@color/amarelo_claro"
            android:contentDescription="@string/proxima_questao"
            android:src="@drawable/ic_next"
            android:text="@string/proxima_questao" />

    </LinearLayout>

</RelativeLayout>